[subresource_filter] Fix smart UI on Android

This regressed in crrev.com/c/1081370 due to a combination of
1. Over-eager refactoring
2. Phantom tests that didn't actually test the functionality.

The regression is reverted here and the test for the feature is
fixed so it actually triggers the behavior.

Bug: 880829
Change-Id: Ic27a0718de685acea00af0b5d88e249b5fb0a6c2
Reviewed-on: https://chromium-review.googlesource.com/1206674
Reviewed-by: Josh Karlin <jkarlin@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588930}
Former-commit-id: d27345d5783756e83e65687da9ed5ec2c356f7b6